Add hyperparam tuning RSCV and GSCV

--- a/heart-disease.ipynb
+++ b/heart-disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f79f2190",
+   "id": "379c7f73",
    "metadata": {},
    "source": [
     "# Problem Definition\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655d103e",
+   "id": "49ee37a9",
    "metadata": {},
    "source": [
     "# Evaluation\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e05338",
+   "id": "9014cfc8",
    "metadata": {},
    "source": [
     "# Features\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "067046c9",
+   "id": "50f77937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5a32ed9f",
+   "id": "4da7cab1",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2a0624",
+   "id": "14ba8c6d",
    "metadata": {},
    "source": [
     "# Data Exploration (EDA)\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cf79b89",
+   "id": "5a9bd7cc",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4bfa19c4",
+   "id": "44f10ddb",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "72ba0bd0",
+   "id": "58e42f24",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "440987b7",
+   "id": "0f3eda1d",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "248d5e56",
+   "id": "b48e1844",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7a1082ef",
+   "id": "0375090b",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a468a13f",
+   "id": "03dea121",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1774595b",
+   "id": "5fbd4313",
    "metadata": {},
    "source": [
     "### Compare few variables"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7fe785b7",
+   "id": "4bef27d3",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d726bd62",
+   "id": "8e66bb6b",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cc72da64",
+   "id": "29af8713",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "be5dd31d",
+   "id": "6cb81593",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dbebf82a",
+   "id": "bd20c10f",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b1f4f549",
+   "id": "53307ec8",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2e01047e",
+   "id": "58c6825d",
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6ac51079",
+   "id": "b6330a8f",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c440ef69",
+   "id": "61f587c2",
    "metadata": {},
    "source": [
     "### Visualize feature correlations"
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "57f9dbaf",
+   "id": "bae06cfe",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63386395",
+   "id": "fc77dbe6",
    "metadata": {},
    "source": [
     "# Modelling"
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe3d924",
+   "id": "ff9f938f",
    "metadata": {},
    "source": [
     "### Prepare data"
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "99336cdf",
+   "id": "348761cf",
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "54537b7d",
+   "id": "728ce5b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7b1c9b",
+   "id": "6d778243",
    "metadata": {},
    "source": [
     "### Create models"
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5ebc3209",
+   "id": "ca1c25d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4b264c7f",
+   "id": "c0eb72e7",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8acf7c52",
+   "id": "5eb352aa",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ff9da29",
+   "id": "8358c466",
    "metadata": {},
    "source": [
     "Next steps:\n",
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7a3e80",
+   "id": "68a9f666",
    "metadata": {},
    "source": [
     " ### Hyperparameter tuning"
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b22ff4",
+   "id": "77e5c296",
    "metadata": {},
    "source": [
     "*By hand*"
@@ -1368,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "79a87baa",
+   "id": "d1ff09f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,88 +1390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "1295a397",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.0,\n",
-       " 0.8099173553719008,\n",
-       " 0.7727272727272727,\n",
-       " 0.743801652892562,\n",
-       " 0.7603305785123967,\n",
-       " 0.7520661157024794,\n",
-       " 0.743801652892562,\n",
-       " 0.7231404958677686,\n",
-       " 0.71900826446281,\n",
-       " 0.6942148760330579,\n",
-       " 0.7272727272727273,\n",
-       " 0.6983471074380165,\n",
-       " 0.6900826446280992,\n",
-       " 0.6942148760330579,\n",
-       " 0.6859504132231405,\n",
-       " 0.6735537190082644,\n",
-       " 0.6859504132231405,\n",
-       " 0.6652892561983471,\n",
-       " 0.6818181818181818,\n",
-       " 0.6694214876033058]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "a8559462",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.6229508196721312,\n",
-       " 0.639344262295082,\n",
-       " 0.6557377049180327,\n",
-       " 0.6721311475409836,\n",
-       " 0.6885245901639344,\n",
-       " 0.7213114754098361,\n",
-       " 0.7049180327868853,\n",
-       " 0.6885245901639344,\n",
-       " 0.6885245901639344,\n",
-       " 0.7049180327868853,\n",
-       " 0.7540983606557377,\n",
-       " 0.7377049180327869,\n",
-       " 0.7377049180327869,\n",
-       " 0.7377049180327869,\n",
-       " 0.6885245901639344,\n",
-       " 0.7213114754098361,\n",
-       " 0.6885245901639344,\n",
-       " 0.6885245901639344,\n",
-       " 0.7049180327868853,\n",
-       " 0.6557377049180327]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
-   "id": "f589a0cf",
+   "id": "bc8b1c1d",
    "metadata": {},
    "outputs": [
     {
@@ -1506,9 +1426,260 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d53aaf4",
+   "metadata": {},
+   "source": [
+    "*By Randomized Search CV*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fb1e2504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create grids for logistic reg & random forest\n",
+    "log_reg_grid = {\n",
+    "    'C': np.logspace(-4, 4, 20),\n",
+    "    'solver': ['liblinear']\n",
+    "}\n",
+    "\n",
+    "rf_grid = {\n",
+    "    'n_estimators': np.arange(10, 20, 10),\n",
+    "    'max_depth': [None, 3, 5],\n",
+    "    'min_samples_split': np.arange(10, 20, 10),\n",
+    "    'min_samples_leaf': np.arange(10, 20, 10)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3466364c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=LogisticRegression(), n_iter=20,\n",
+       "                   param_distributions={'C': array([1.00000000e-04, 2.63665090e-04, 6.95192796e-04, 1.83298071e-03,\n",
+       "       4.83293024e-03, 1.27427499e-02, 3.35981829e-02, 8.85866790e-02,\n",
+       "       2.33572147e-01, 6.15848211e-01, 1.62377674e+00, 4.28133240e+00,\n",
+       "       1.12883789e+01, 2.97635144e+01, 7.84759970e+01, 2.06913808e+02,\n",
+       "       5.45559478e+02, 1.43844989e+03, 3.79269019e+03, 1.00000000e+04]),\n",
+       "                                        'solver': ['liblinear']},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tune LogisticRegression\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "rs_log_reg = RandomizedSearchCV(\n",
+    "    LogisticRegression(),\n",
+    "    param_distributions=log_reg_grid,\n",
+    "    cv=5,\n",
+    "    n_iter=20,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "rs_log_reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "96531f6c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'solver': 'liblinear', 'C': 0.23357214690901212}, 0.8852459016393442)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_log_reg.best_params_, rs_log_reg.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "de429d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\acer\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\model_selection\\_search.py:296: UserWarning: The total space of parameters 3 is smaller than n_iter=20. Running 3 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  UserWarning,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestClassifier(), n_iter=20,\n",
+       "                   param_distributions={'max_depth': [None, 3, 5],\n",
+       "                                        'min_samples_leaf': array([10]),\n",
+       "                                        'min_samples_split': array([10]),\n",
+       "                                        'n_estimators': array([10])},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tune RandomForest\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "rs_rf = RandomizedSearchCV(\n",
+    "   RandomForestClassifier(), \n",
+    "   param_distributions=rf_grid,\n",
+    "   cv=5,\n",
+    "   n_iter=20,\n",
+    "   verbose=True\n",
+    ")\n",
+    "\n",
+    "rs_rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a8f82424",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'n_estimators': 10,\n",
+       "  'min_samples_split': 10,\n",
+       "  'min_samples_leaf': 10,\n",
+       "  'max_depth': 5},\n",
+       " 0.8852459016393442)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_rf.best_params_, rs_rf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4da37b21",
+   "metadata": {},
+   "source": [
+    "*By Grid Search CV*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b0a96633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=LogisticRegression(),\n",
+       "             param_grid={'C': array([1.00000000e-04, 2.63665090e-04, 6.95192796e-04, 1.83298071e-03,\n",
+       "       4.83293024e-03, 1.27427499e-02, 3.35981829e-02, 8.85866790e-02,\n",
+       "       2.33572147e-01, 6.15848211e-01, 1.62377674e+00, 4.28133240e+00,\n",
+       "       1.12883789e+01, 2.97635144e+01, 7.84759970e+01, 2.06913808e+02,\n",
+       "       5.45559478e+02, 1.43844989e+03, 3.79269019e+03, 1.00000000e+04]),\n",
+       "                         'solver': ['liblinear']},\n",
+       "             verbose=True)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tune LogisticRegression\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "gs_log_reg = GridSearchCV(\n",
+    "    LogisticRegression(),\n",
+    "    param_grid=log_reg_grid,\n",
+    "    cv=5,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "gs_log_reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "c0b701e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'C': 0.23357214690901212, 'solver': 'liblinear'}, 0.8852459016393442)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs_log_reg.best_params_, gs_log_reg.score(X_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf9ed49",
+   "id": "757fe249",
    "metadata": {},
    "outputs": [],
    "source": []
