Add final model

--- a/heart-disease.ipynb
+++ b/heart-disease.ipynb
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0447e33",
+   "id": "29d7dd65",
    "metadata": {},
    "source": [
     "# Evaluation\n",
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334a3081",
+   "id": "9939861a",
    "metadata": {},
    "source": [
     "### base evaluation"
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a4d7f061",
+   "id": "4c1d4caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a0d526a6",
+   "id": "93df7c4f",
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "141f5f58",
+   "id": "0b4551fd",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c52f6359",
+   "id": "71425d4e",
    "metadata": {
     "scrolled": true
    },
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ceac6c",
+   "id": "da9ce41f",
    "metadata": {},
    "source": [
     "### Cross-Validation evaluation\n",
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4a35c8e1",
+   "id": "9d41e429",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a59cc82e",
+   "id": "0276e8b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d1460aaf",
+   "id": "4bde17a5",
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3f597766",
+   "id": "b5b623a8",
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "62e5343e",
+   "id": "231c5fcd",
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e9b71042",
+   "id": "43ba27dc",
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "45fa442a",
+   "id": "f2666b3f",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4d31dff8",
+   "id": "e87e9134",
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e1e6ee",
+   "id": "a44de9a2",
    "metadata": {},
    "source": [
     "# Feature Importance\n",
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9b703ca0",
+   "id": "c14579ac",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e727e3fb",
+   "id": "3587042c",
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a23541f3",
+   "id": "e45c63fa",
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2200,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "61bf2585",
+   "id": "9f6dce2d",
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "53f21ef4",
+   "id": "c3fb0389",
    "metadata": {},
    "outputs": [
     {
@@ -2293,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c92527b4",
+   "id": "98234d7b",
    "metadata": {},
    "outputs": [
     {
@@ -2364,12 +2364,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0622c5a",
+   "metadata": {},
+   "source": [
+    "# Experimentation\n",
+    "\n",
+    "* Could we collect more data?\n",
+    "* Can we try a better model? (XGBoost)\n",
+    "* Can we improve the current model further?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18b04819",
+   "execution_count": 76,
+   "id": "dbb97582",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(new_log_reg, open('final-model.joblib', 'wb'))"
+   ]
   }
  ],
  "metadata": {
